--- a/components/sms.html
+++ b/components/sms.html
@@ -43,8 +43,9 @@
                     <iframe 
                         src="https://www.chatbase.co/chatbot-iframe/n4pEzS6uQFXagUnju0eva" 
                         width="100%" 
-                        style="height: 100%; min-height: 600px" 
-                        frameborder="0"
+                        height="700"
+                        style="border:0; border-radius: 20px; overflow:hidden;" 
+                        allow="microphone; clipboard-write"
                         loading="lazy"
                         class="chat-iframe">
                     </iframe>
@@ -114,6 +115,8 @@
 .chat-iframe {
     display: block;
     border-radius: 0 0 28px 28px;
+    height: 700px;
+    width: 100%;
 }
 
 /* Floating Emojis */
